Replace calls to deprecated RealmModel IDP methods - use the new provider instead
Closes #31254

Signed-off-by: Stefan Guilhen <sguilhen@redhat.com>